apps/infra/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        imagePullPolicy: Always
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-pvc
          mountPath: /var/lib/postgresql/data
        - name: test-pvc
          mountPath: /test
      volumes:
      - name: postgresql-pvc
        persistentVolumeClaim:
            claimName: postgresql-pvc
      - name: test-pvc
        persistentVolumeClaim:
            claimName: test-pvc
